@@ -610,6 +610,18 @@ void jshInit() {
   jshDelayMicroseconds(10);
   jshPinSetState(DEFAULT_CONSOLE_RX_PIN, JSHPINSTATE_GPIO_IN);
   jshDelayMicroseconds(10);
+
+#ifdef MICROBIT
+  /* We must wait ~1 second for the USB interface to initialise
+   * or it won't raise the RX pin and we won't think anything
+   * is connected. */
+  bool waitForUART = !jshPinGetValue(DEFAULT_CONSOLE_RX_PIN);
+  for (int i=0;i<10 && !jshPinGetValue(DEFAULT_CONSOLE_RX_PIN);i++) {
+    nrf_delay_ms(100);
+    ticksSinceStart = 0;
+  }
+#endif
+
   if (jshPinGetValue(DEFAULT_CONSOLE_RX_PIN)) {
     JshUSARTInfo inf;
     jshUSARTInitInfo(&inf);
@@ -617,6 +629,18 @@ void jshInit() {
     inf.pinTX = DEFAULT_CONSOLE_TX_PIN;
     inf.baudRate = DEFAULT_CONSOLE_BAUDRATE;
     jshUSARTSetup(EV_SERIAL1, &inf); // Initialize UART for communication with Espruino/terminal.
+#ifdef MICROBIT
+    /* Even after USB is initialised we must wait ~3 sec since otherwise
+     * the OS won't connect to the device and it'll lose what we're
+     * trying to send. 3 sec is a long time so only wait if we're sure
+     * the UART wasn't powered when we connected. */
+    if (waitForUART) {
+      for (int i=0;i<30;i++) {
+        nrf_delay_ms(100);
+        ticksSinceStart = 0;
+      }
+    }
+#endif
   } else {
     // If there's no UART, 'disconnect' the IO pin - this saves power when in deep sleep in noisy electrical environments
     jshPinSetState(DEFAULT_CONSOLE_RX_PIN, JSHPINSTATE_UNDEFINED);
